--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ desktop.ini
 *.cache
 
 # OpenCode
-.opencode/node_modules/
-.opencode/bun.lock
+.opencode/*
+!.opencode/skills/markdown-image-organizer/
 
 # Debug
 npm-debug.log*
