--- a/.gitignore
+++ b/.gitignore
@@ -31,12 +31,25 @@ desktop.ini
 *.tmp
 .cache/
 *.cache
-
-# OpenCode
-.opencode/*
-!.opencode/skills/markdown-image-organizer/
+*.md.bak
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# OpenCode workspace
+.opencode/*
+!.opencode/skills/markdown-image-organizer/
+
+# Session and operation logs
+SESSION_SUMMARY.md
+.git_operation_memory.md
+
+# Fix scripts (temporary)
+*_FIX.md
+*-structure.ps1
+GIT_CONFIG.md
+/findings.md
+/progress.md
+/task_plan.md
